--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -11,16 +11,16 @@ RUN apt-get update && apt-get install -y \
         libvpx-dev \
         libzip-dev \
     && pecl install xdebug \
-    && docker-php-ext-enable xdebug \
-    && docker-php-ext-install -j$(nproc) gd \
-    && docker-php-ext-install -j$(nproc) intl \
-    && docker-php-ext-install -j$(nproc) zip \
-    && docker-php-ext-install -j$(nproc) pgsql \
-    && docker-php-ext-install -j$(nproc) pdo_pgsql \
-    && docker-php-ext-install -j$(nproc) exif \
-    && docker-php-ext-install -j$(nproc) sockets \
-    && docker-php-ext-enable sockets \
-    && docker-php-ext-configure gd \
+    && .docker-php-ext-enable xdebug \
+    && .docker-php-ext-install -j$(nproc) gd \
+    && .docker-php-ext-install -j$(nproc) intl \
+    && .docker-php-ext-install -j$(nproc) zip \
+    && .docker-php-ext-install -j$(nproc) pgsql \
+    && .docker-php-ext-install -j$(nproc) pdo_pgsql \
+    && .docker-php-ext-install -j$(nproc) exif \
+    && .docker-php-ext-install -j$(nproc) sockets \
+    && .docker-php-ext-enable sockets \
+    && .docker-php-ext-configure gd \
         --with-freetype=/usr/include/ \
         --with-jpeg=/usr/include/ \
         --with-xpm=/usr/lib/x86_64-linux-gnu/
