--- a/.docker/conf/nginx/default.conf
+++ b/.docker/conf/nginx/default.conf
@@ -4,11 +4,11 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/html/app/public/;
+    root /var/www/html/app/public;
     index index.php index.php index.htm;
 
     location / {
-        try_files $uri $uri/ /index.php?$args;
+        try_files $uri /index.php?$args;
     }
 
     location ~ \.php$ {
