--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
     build: .docker
     restart: always
     volumes:
-#      - ./.docker/conf/php/php.ini:/usr/local/etc/php/conf.d/php.ini
-#      - ./.docker/conf/php/xdebug.ini:/usr/local/etc/php/conf.d/.docker-php-ext-xdebug.ini
+      - ./.docker/conf/php/php.ini:/usr/local/etc/php/conf.d/php.ini
+      - ./.docker/conf/php/xdebug.ini:/usr/local/etc/php/conf.d/.docker-php-ext-xdebug.ini
       - .:/var/www/html
 
   db:
