--- a/.docker/conf/php/php.ini
+++ b/.docker/conf/php/php.ini
@@ -1,5 +1,5 @@
-;
-;date.timezone = Europe/Paris
-;
-;display_errors = 1
-;error_reporting = E_ALL
+
+date.timezone = Europe/Paris
+
+display_errors = 1
+error_reporting = E_ALL
